# app/Http/Controllers/Api/Admin/AdminController.php
@@ -19,6 +19,39 @@ class AdminController extends Controller
         $this->middleware('auth:adminApi');
     }
 
+
+    /**
+     * @OA\Get(
+     *      path="/api/admin/allTransaction",
+     *      operationId="allTransaction",
+     *      tags={"transaction"},
+     *      summary="all transaction",
+     *      description="all transaction in system",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad user Input",
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Resource Not Found"
+     *      )
+     *
+     * )
+     */
+
     public function all_transaction()
     {
         $transaction = Transaction::orderBy('created_at')->get();
